# Offensive-IT-Tester-Agent

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_agent.py
.github/workflows/: tests.yml
app/: RUN_STREAMLIT.md  app.py  requirements_app.txt
audit report/: audit log_2026-07-21T19-04_export.csv
data/: README.md
data/processed/: csic_clean.csv
docs/: Offensive_IT-Tester_Documentation_v2.docx
models/: best_pipe.joblib  label_encoder.joblib
notebooks/: README.md  agent_core.py  audit_dashboard.html  best_pipe.joblib  label_encoder.joblib  payloads_clean.csv  test_agent_core.py  week1_data_analysis.ipynb  week2_baseline_and_agent.ipynb  week3_final_agent.ipynb
sandbox/: target_app.py
src/offensive_it_tester/: __init__.py
src/offensive_it_tester/agent/: __init__.py  enforcer.py  graph.py  planners.py  session.py  ssvc_policy.py  tools.py
src/offensive_it_tester/core/: __init__.py  audit.py  detectors.py  recon.py  scope.py  target.py
src/offensive_it_tester/models/: train_classifier.py
tests/: test_ai_surfaces_and_ssvc.py  test_core.py  test_enforcer.py  test_recon.py
