[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "offensive-it-tester"
version = "1.0.0"
description = "A responsible, lab-scoped, LLM-planned web-vulnerability testing agent."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "joblib>=1.3",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
xai = ["shap>=0.44"]
app = ["streamlit>=1.30", "plotly>=5.18"]
sandbox = ["flask>=3.0"]
cloud-llm = ["anthropic>=0.30"]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
